# face-blur-yunet

./: .gitignore  LICENSE  README.md  blur_faces.py  pyproject.toml  requirements.txt
docs/: project-notes-and-roadmap.md  setup.md
docs/superpowers/plans/: 2026-04-30-local-video-processing-dashboard.md
docs/superpowers/specs/: 2026-04-30-local-video-processing-dashboard-design.md
face_blur_yunet/: app.py  face_blur.py  jobs.py  media.py  media_download.py  models.py  pipeline.py  question_answering.py  subtitles.py  transcript_index.py  transcription.py  translation.py
face_blur_yunet/static/: app.js  index.html  styles.css
scripts/: setup-macos.sh  setup-windows.ps1
tests/: test_app.py  test_face_blur.py  test_jobs.py  test_media.py  test_media_download.py  test_models.py  test_pipeline.py  test_question_answering.py  test_subtitles.py  test_transcript_index.py  test_transcription.py  test_translation.py
