[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "face-blur-yunet"
version = "0.2.0"
description = "Local-first media transcription, translation, transcript Q&A, and YuNet face blurring dashboard."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "modeitsch" }
]
dependencies = [
  "fastapi",
  "httpx",
  "numpy",
  "opencv-python-headless",
  "python-multipart",
  "uvicorn",
]

[project.optional-dependencies]
transcription = ["faster-whisper"]
translation = ["argostranslate"]
dev = ["pytest", "ruff"]
all = ["faster-whisper", "argostranslate", "pytest", "ruff"]

[tool.setuptools]
packages = ["face_blur_yunet"]

[tool.setuptools.package-data]
face_blur_yunet = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP007"]
